--- a/src/main/webapp/WEB-INF/layouts/tumorboard_html.xhtml
+++ b/src/main/webapp/WEB-INF/layouts/tumorboard_html.xhtml
@@ -11,7 +11,7 @@
 
 <h:head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<title>css Test</title>
+	<title>tumorboard</title>
 	<link rel="stylesheet" href="${request.contextPath}/styles/w3main.css" type="text/css" media="screen, projection" />
 	<link rel="stylesheet" href="${request.contextPath}/styles/tumorboard.css" type="text/css" media="screen, projection" />
 	<!-- 
